package com.buschmais.backend.adr.external;

public enum ExternalContentType {
	TEXT,
	IMAGE,
}
