package com.buschmais.backend.voting;

public enum VoteType {
	FOR,
	AGAINST,
}
